yyamamoto+sesetup@salesforce.com/src/objects/AppExchangeList__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>お勧めフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>参照URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <formula>HYPERLINK( URL__c , &quot;Webで参照する&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webリンク</label>
        <type>Text</type>
    </fields>
    <label>お勧めAppExchange</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Web__c</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field2__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>お勧めAppExchange名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>